<?xml version="1.0"?>
<package format="3">
  <name>Fast_drone</name>
  <version>0.23.0</version>
  <description>The Fast package</description>

  <maintainer email="zarubinilia@yandex.ru">Ilya Zarubin</maintainer>
  <license>MIT</license>


  <author email="zarubinilia@yandex.ru">Ilya Zarubin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package format specifier version 2.0 allows specifying dependencies for both
   build- and runtime in a single <depend> element -->
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geographiclib</depend>
  <depend>nodelet</depend>
  <depend>mavros</depend>
  <depend>mavros_extras</depend>
</package>
