<?xml version="1.0"?>
<package format="2">
  <name>fast_drone</name>
  <version>0.0.0</version>
  <description>The fast_drone package</description>

  <maintainer email="zarubinilia@yandex.ru">iliaaer</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>geographiclib</depend>
  <depend>mavros</depend>
  <depend>mavros_extras</depend>

  
  <export>

  </export>
</package>
